    Changed: Upstart job file paths, sysvinit script paths and systemd unit files paths are now cached (init providers)
    Fixed: composer.phar must not be run with root user privileges (it is now run with i-MSCP system master user)
    Fixed: eth0 is hardcoded in i-MSCP network interface provider
    Fixed: Many inconsistencies in iMSCP::Getopt
    Removed: beforeDispatchRequest and afterDispatchRequest events
    Removed: cache data directory (/var/cache/imscp directory)
    Removed: imscp-httpd-logs-mngr script (Apache2 logs dirctories are now mounted through imscp_mountall service)
    Rewritten: iMSCP::SetRights library (usage of built-in functions to avoid call of system chown/chmod commands)

CONFIG
    Added: IMSCP_USER parameter (name of i-MSCP master system user)
    Added: DISTRO_ID, DISTRO_CODENAME and DISTRO_RELEASE parameters in imscp.conf file
    Added: MAX_INSTANCES, MAX_CLIENT_PER_HOST and FTPD_CONF_DIR parameters in proftpd/proftpd.data file
    Added: MOUNT_CUSTOMER_LOGS parameter in apache/apache.data file (allows to disable logs bind mounts)
    Changed: Increased default limits for ProFTPD/VsFTPd
    Depreciated: CACHE_DATA_DIR parameters
    Fixed: Allow access to .well-known folder in any case if exists (Apache2)
    Removed: Redundant MYSQL_PREFIX_TYPE parameter
    Removed: VARIABLE_DATA_DIR parameter

DATABASE
    Added: SPF type to the list of allowed DNS resource records
    Changed: domain_dns.domain_dns and domain_dns.domain_text column types from varchar to text
    Changed: i-MSCP now uses its own SQL user (master SQL user). See errata file for more details.
    Updated: domain_id index on domain_dns table; added index length for domain_dns and domain_text columns

FRONTEND
    Added: iMSCP\Net class - Allow to get list of network devices and IP addresses
    Added: Datatable for the file system information table
    Added: SPF DNS resource record type (validated as a TXT record)